--- a/package.json
+++ b/package.json
@@ -2,14 +2,29 @@
   "name": "skany",
   "version": "1.0.0",
   "description": "",
+  "proxy": "http://localhost:3001",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "client": "npm run start --prefix client",
+    "dev": "concurrently \"npm run index\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "@adminjs/express": "^4.0.0",
+    "@adminjs/mongoose": "^2.0.0",
+    "adminjs": "^5.1.0",
+    "express": "^4.17.1",
+    "express-formidable": "^1.2.0",
+    "express-session": "^1.17.2",
+    "mongoose": "^5.13.6"
+  },
+  "devDependencies": {
+    "concurrently": "^6.2.1",
+    "nodemon": "^2.0.12"
   }
 }
