--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "express-session": "^1.17.2",
+    "helmet": "^4.6.0",
     "mongoose": "^5.13.6"
   },
   "devDependencies": {
